# desafio_Aeolus_Cloud

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_PLAN.md  CLAUDE.md  Desafio Técnico Engenheiro IA.docx  Dockerfile  README.md  TASKS.md  docker-compose.yml  main.py  pyproject.toml
config/: settings.yaml
docker/: entrypoint.sh
scripts/: benchmark_detection.py  benchmark_ocr.py  download_models.py  download_plate_model.py  generate_synthetic_video.py  inspect_hf.py  query_db.py  slice_video.py
src/: config.py  domain.py  main.py
src/capture/: video_capture.py
src/counting/: crossing_logic.py
src/database/: db_writer.py  models.py
src/detection/: yolo_detector.py
src/ocr/: fast_alpr_worker.py  plate_detector.py  plate_ocr.py
src/rendering/: overlay_renderer.py
src/tracking/: bytetrack_wrapper.py
tests/integration/: test_pipeline_phase1.py
tests/unit/: test_bytetrack_wrapper.py  test_config.py  test_crossing_logic.py  test_db_writer.py  test_domain.py  test_fast_alpr_worker.py  test_overlay_renderer.py  test_plate_detector.py  test_plate_ocr.py  test_video_capture.py  test_yolo_detector.py
