[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-counter"
version = "0.1.0"
description = "Pipeline de Visão Computacional para contagem e classificação de veículos"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0",
    "easyocr>=1.7",
    "opencv-python-headless>=4.8",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "supervision>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # supervision v0.28 depreciou ByteTrack; migrar para trackers.ByteTrackTracker antes da v0.30
    "ignore:.*ByteTrack.*deprecated.*:FutureWarning",
]
